--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 							<figure>
 								<!-- <img src="images/profile.jpg" alt="Здесь должна быть аватарка"> -->
 							</figure>
-							<h1>Тимофее Максим Сергеевич</h1>
+							<h1>Тимофеев Максим Сергеевич</h1>
 							<p>Сайт пока находится в разработке. Сокоро будут добавлены фотографии, описания и т.д.</p>
                             <p>Чтобы попасть на резюме, нажмите на иконку Google в разделе со ссылками</p>
                             <p>(В будущем возможен редизайн)</p>
