--- a/index.html
+++ b/index.html
@@ -78,26 +78,31 @@
 								<!-- <img src="images/profile.jpg" alt="Здесь должна быть аватарка"> -->
 							</figure>
 							<h1>Тимофеев Максим Сергеевич</h1>
+							<h3>Web Developer</h3>
 							<p>Сайт пока находится в разработке. Сокоро будут добавлены фотографии, описания и т.д.</p>
-                            <p>Чтобы попасть на резюме, нажмите на иконку Google в разделе со ссылками</p>
+                            <p>Чтобы попасть на резюме, нажмите на иконку Google в разделе мои контакты</p>
                             <p>(В будущем возможен редизайн)</p>
 						</div>
 					</div>
-					<!-- <div class="row">
+					<div class="row">
 						<div class="col-md-12 fh5co-counter">
-							<div class="fh5co-number fh5co-left">10</div>
+							<div class="fh5co-number fh5co-left">2</div>
 							<div class="fh5co-text">
-								<h3 class="border-bottom">Years of experience in Web Design</h3>
-								<p>Far far away, behind the word mountains, far from the countries.</p>
+								<h3 class="border-bottom">Года</h3>
+								<p>увлекаюсь веб технологиями, программированием и устройством компьютерного мира в целом</p>
 							</div>
 						</div>
-					</div> -->
+					</div>
+					<div class="contacts">
+						Мои контакты:
+					</div>
 					<ul class="fh5co-social">
 						<li><a href="mailto:timofeev2001maksim@gmail.com"><i class="icon-envelope"></i></a></li>
-						<li><a href="https://vk.com/caserol"><i class="icon-vk"></i></a></li>
+						<li><a href="https://vk.com/maksimuald"><i class="icon-vk"></i></a></li>
 						<li><a href="https://www.instagram.com/maksimuald/"><i class="icon-instagram"></i></a></li>
 						<li><a href="https://docs.google.com/document/d/1GD_NXmFoOPwYfNKofqJ6ImcyOWHkuvGNOL8b73Qinn8"><i class="icon-google"></i></a></li>
 						<li><a href="https://t.me/maksimuald"><i class="fab fa-telegram"></i></a></li>
+						<li><a href="tel:+79265518352"><i class="fas fa-mobile-alt"></i></a></li>
 					</ul>
 				</div>
 			</div>
@@ -188,9 +193,29 @@
 						</div>
 						
 					</div> -->
-                    <p>Сайт пока находится в разработке. Сокоро будут добавлены фотографии, описания и т.д.</p>
-                    <p>Чтобы попасть на резюме, нажмите на иконку Google в разделе со ссылками</p>
-                    <p>(В будущем возможен редизайн)</p>                  
+					<h3>Коммерческий опыт:</h3>
+                    <p>Коммерческого опыта работы не имею в связи с обучением в университете.</p>
+					<h3>Некоммерческий опыт:</h3>
+                    <p>В рамках практики участвовал в разработке портала центра карьеры для студентов и студенческого портала для нужд университета.</p>
+					<h3>Ссылки:</h3>
+					<p>Ссылки прикрепить к сожалению не могу. Репозиторий GitHub является private, владельцем репозитория не являюсь, поэтому доступ открыть не могу </p>         
+					<p>Осенью 2021 г. участвовал в хакатоне от компании “Цифра”.</p>
+					<h3>Ссылки:</h3>
+					<p>Ссылки прикрепить к сожалению не могу. Репозиторий GitHub является private, владельцем репозитория не являюсь, поэтому доступ открыть не могу </p>         
+					<p>Во время обучения в МГТУ им. Баумана самостаятельно выполнял лабораторные работы. Самих работ не сохранилось, но остались отчеты по этим работам (там находяться: задание, код программы, результат работы программы )</p>
+					<h3>Ссылки:</h3>
+					<p>Лабораторные работы по Delphi (Здесь код ужасный, из-за плохих названий переменных!):</p>
+					<p><a href="https://github.com/maksimualdTim/labs/tree/main/labsDelphi">https://github.com/maksimualdTim/labs/tree/main/labsDelphi</a></p>
+					<p>Лабораторные работы по C++:</p>
+					<p><a href="https://github.com/maksimualdTim/labs/tree/main/labsC%2B%2B">https://github.com/maksimualdTim/labs/tree/main/labsC%2B%2B</a></p>
+					<p>Лабораторные работы, выполненные в ходе прохождения курсов в Московском Политехе</p>
+					<h3>Ссылки:</h3>
+					<p>Самописный PHP OOP MVC framework(Аккуратно, плохой код!):</p>
+					<p><a href="https://github.com/maksimualdTim/php-mvc-oop-framework">https://github.com/maksimualdTim/php-mvc-oop-framework</a></p>
+					<p>Также создавали свой блог, использую Laravel:</p>
+					<p><a href="https://github.com/maksimualdTim/laravel-project">https://github.com/maksimualdTim/laravel-project</a></p>
+					<p>Во время самостаятельного обучения были выполнены некоторые маленькие проекты. К сожалению, в то время не был знаком с GitHub, большиство из них было утеряно в связи со сменой компьютера</p>
+
 				</div>
 			</div>
 			<div class="fh5co-tab-content" data-content="4">
@@ -219,7 +244,7 @@
 							<div class="chart" data-percent="65"><span><strong>SQL</strong>65%</span></div>
 						</div>
 						<div class="col-md-4 col-sm-6 col-xs-12 text-center">
-							<div class="chart" data-percent="40"><span><strong>VueJS</strong>40%</span></div>
+							<div class="chart" data-percent="35"><span><strong>VueJS</strong>35%</span></div>
 						</div>
 						
                         <div class="col-md-4 col-sm-6 col-xs-12 text-center">
@@ -229,7 +254,7 @@
 							<div class="chart" data-percent="50"><span><strong>Python</strong>50%</span></div>
 						</div>
 						<div class="col-md-4 col-sm-6 col-xs-12 text-center">
-							<div class="chart" data-percent="40"><span><strong>Django</strong>40%</span></div>
+							<div class="chart" data-percent="25"><span><strong>Django</strong>25%</span></div>
 						</div>
 
                         <div class="col-md-4 col-sm-6 col-xs-12 text-center">
