--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
 				<li><a href="#" data-tab="2"><span class="icon icon-graduation-cap"></span><span class="menu-text">Образование</span></a></li>
 				<li><a href="#" data-tab="3"><span class="icon icon-black-tie"></span><span class="menu-text">Опыт</span></a></li>
 				<li><a href="#" data-tab="4" data-pie="yes"><span class="icon icon-fighter-jet"></span><span class="menu-text">Навыки</span></a></li>
+				<li><a href="#" data-tab="5" data-pie="yes"><span class="icon fas fa-user"></span><span class="menu-text">Характеристика</span></a></li>
 			</ul>
 			<div class="fh5co-tab-content active" data-content="1">
 				<div class="fh5co-content-inner text-center">
@@ -152,7 +153,7 @@
 									<i class="icon-graduation-cap"></i>
 								</div>
 								<div class="fh5co-text">
-									<h2>2021-???</h2>
+									<h2>2021-Настоящее время</h2>
 									<p>Московский политехнический университет. Факультет: "Факультет информационных технологий" (ФИТ). Направление: "Информатика и вычислительная техника" (ИиВТ). Специальность: "Веб-разработка"</p>
 									<p>В данном университете в настоящее время я обучаюсь.</p>
 								</div>
@@ -165,10 +166,10 @@
 			</div>
 			<div class="fh5co-tab-content" data-content="3">
 				<div class="fh5co-content-inner">
-					<!-- <div class="row">
+					<div class="row">
 						<div class="col-md-12">
 
-							<p>I have the privilege to work with these cool companies.</p>
+							<!-- <p>I have the privilege to work with these cool companies.</p>
 
 							<div class="fh5co-feature">
 								<div class="fh5co-icon">
@@ -201,32 +202,59 @@
 									<h3>Previous Ltd Co.</h3>
 									<p>Far far away, behind the word mountains, far from the countries.</p>
 								</div>
+							</div> -->
+							<h3>Коммерческий опыт:</h3>
+							<p>Коммерческого опыта работы не имею в связи с обучением в университете.</p>
+							<h3>Некоммерческий опыт:</h3>
+							<div class="fh5co-feature">
+								<div class="fh5co-icon">
+									<i class="icon-black-tie"></i>
+								</div>
+								<div class="fh5co-text">
+									<h2>2021</h2>
+									<h3>Московский политех</h3>
+									  <p>В рамках практики участвовал в разработке портала центра карьеры для студентов и студенческого портала для нужд университета.</p>
+										<h3>Ссылки:</h3>
+										<p>Ссылки прикрепить к сожалению не могу. Репозиторий GitHub является private, владельцем репозитория не являюсь, поэтому доступ открыть не могу </p>
+										<p>Лабораторные работы, выполненные в ходе прохождения курсов в Московском Политехе</p>
+										<h3>Ссылки:</h3>
+										<p>Самописный PHP OOP MVC framework(Аккуратно, плохой код!):</p>
+										<p><a href="https://github.com/maksimualdTim/php-mvc-oop-framework">https://github.com/maksimualdTim/php-mvc-oop-framework</a></p>
+										<p>Также создавали свой блог, использую Laravel:</p>
+										<p><a href="https://github.com/maksimualdTim/laravel-project">https://github.com/maksimualdTim/laravel-project</a></p>
+								</div>
+							</div>
+							<div class="fh5co-feature">
+								<div class="fh5co-icon">
+									<i class="icon-black-tie"></i>
+								</div>
+								<div class="fh5co-text">
+									<h2>2021</h2>
+									<h3>“Цифра”</h3>
+									<p>Осенью 2021 г. участвовал в хакатоне от компании “Цифра”.</p>
+									<h3>Ссылки:</h3>
+									<p>Ссылки прикрепить к сожалению не могу. Репозиторий GitHub является private, владельцем репозитория не являюсь, поэтому доступ открыть не могу </p>
+								</div>
+							</div>
+							<div class="fh5co-feature">
+								<div class="fh5co-icon">
+									<i class="icon-black-tie"></i>
+								</div>
+								<div class="fh5co-text">
+									<h2>2019</h2>
+									<h3>МГТУ им. Баумана</h3>
+									<p>Во время обучения в МГТУ им. Баумана самостаятельно выполнял лабораторные работы. Самих работ не сохранилось, но остались отчеты по этим работам (там находяться: задание, код программы, результат работы программы )</p>
+									<h3>Ссылки:</h3>
+									<p>Лабораторные работы по Delphi (Здесь код ужасный, из-за плохих названий переменных!):</p>
+									<p><a href="https://github.com/maksimualdTim/labs/tree/main/labsDelphi">https://github.com/maksimualdTim/labs/tree/main/labsDelphi</a></p>
+									<p>Лабораторные работы по C++:</p>
+									<p><a href="https://github.com/maksimualdTim/labs/tree/main/labsC%2B%2B">https://github.com/maksimualdTim/labs/tree/main/labsC%2B%2B</a></p>
+								</div>
 							</div>
 
 						</div>
 
-					</div> -->
-					<h3>Коммерческий опыт:</h3>
-                    <p>Коммерческого опыта работы не имею в связи с обучением в университете.</p>
-					<h3>Некоммерческий опыт:</h3>
-                    <p>В рамках практики участвовал в разработке портала центра карьеры для студентов и студенческого портала для нужд университета.</p>
-					<h3>Ссылки:</h3>
-					<p>Ссылки прикрепить к сожалению не могу. Репозиторий GitHub является private, владельцем репозитория не являюсь, поэтому доступ открыть не могу </p>
-					<p>Осенью 2021 г. участвовал в хакатоне от компании “Цифра”.</p>
-					<h3>Ссылки:</h3>
-					<p>Ссылки прикрепить к сожалению не могу. Репозиторий GitHub является private, владельцем репозитория не являюсь, поэтому доступ открыть не могу </p>
-					<p>Во время обучения в МГТУ им. Баумана самостаятельно выполнял лабораторные работы. Самих работ не сохранилось, но остались отчеты по этим работам (там находяться: задание, код программы, результат работы программы )</p>
-					<h3>Ссылки:</h3>
-					<p>Лабораторные работы по Delphi (Здесь код ужасный, из-за плохих названий переменных!):</p>
-					<p><a href="https://github.com/maksimualdTim/labs/tree/main/labsDelphi">https://github.com/maksimualdTim/labs/tree/main/labsDelphi</a></p>
-					<p>Лабораторные работы по C++:</p>
-					<p><a href="https://github.com/maksimualdTim/labs/tree/main/labsC%2B%2B">https://github.com/maksimualdTim/labs/tree/main/labsC%2B%2B</a></p>
-					<p>Лабораторные работы, выполненные в ходе прохождения курсов в Московском Политехе</p>
-					<h3>Ссылки:</h3>
-					<p>Самописный PHP OOP MVC framework(Аккуратно, плохой код!):</p>
-					<p><a href="https://github.com/maksimualdTim/php-mvc-oop-framework">https://github.com/maksimualdTim/php-mvc-oop-framework</a></p>
-					<p>Также создавали свой блог, использую Laravel:</p>
-					<p><a href="https://github.com/maksimualdTim/laravel-project">https://github.com/maksimualdTim/laravel-project</a></p>
+					</div>
 					<p>Во время самостаятельного обучения были выполнены некоторые маленькие проекты. К сожалению, в то время не был знаком с GitHub, большиство из них было утеряно в связи со сменой компьютера</p>
 
 				</div>
@@ -235,10 +263,8 @@
 				<div class="fh5co-content-inner">
 					<div class="row">
 						<div class="col-md-12">
-							<p>Здесь представлены мои навыки</p>
-                            <p>Сайт пока находится в разработке. Сокоро будут добавлены фотографии, описания и т.д.</p>
-                            <p>Чтобы попасть на резюме, нажмите на иконку Google в разделе со ссылками</p>
-                            <p>(В будущем возможен редизайн)</p>
+							<h3>Здесь представлены мои навыки</h3>
+							<p>Большинство из них осваивал самостоятельно, путем прохождения видеокурсов на YouTube, чтения специальной литературы и документации.</p>
 						</div>
 						<div class="col-md-4 col-sm-6 col-xs-12 text-center">
 							<div class="chart" data-percent="65"><span><strong>HTML5</strong>65%</span></div>
@@ -280,6 +306,16 @@
 							<div class="chart" data-percent="40"><span><strong>Linux</strong>40%</span></div>
 						</div>
 
+					</div>
+				</div>
+			</div>
+			<div class="fh5co-tab-content" data-content="5">
+				<div class="fh5co-content-inner">
+					<div class="row">
+						<div class="col-md-12">
+							<h3>Здесь представлена моя характеристика</h3>
+							<p>Большинство из них осваивал самостоятельно, путем прохождения видеокурсов на YouTube, чтения специальной литературы и документации.</p>
+						</div>
 					</div>
 				</div>
 			</div>
