--- a/index.html
+++ b/index.html
@@ -314,7 +314,25 @@
 					<div class="row">
 						<div class="col-md-12">
 							<h3>Здесь представлена моя характеристика</h3>
-							<p>Большинство из них осваивал самостоятельно, путем прохождения видеокурсов на YouTube, чтения специальной литературы и документации.</p>
+							<h4>Мои плюсы:</h4>
+							<ul>
+								<li>Добрый</li>
+								<li>Открытый</li>
+								<li>Честный</li>
+								<li>Справедливый</li>
+								<li>Веду здоровый образ жизни</li>
+								<li>Стрессоустойчивый</li>
+								<li>Пунктуальный</li>
+								<li>Постоянно развиваюсь</li>
+							</ul>
+							<h4>Мои минусы:</h4>
+							<ul>
+								<li>Иногда не хватает решительности (всегда взвешиваю за и против)</li>
+								<li>Самокритичность</li>
+								<li>Прямолинейность</li>
+								<li>Медлительность</li>
+								<li>Доверчивость</li>
+							</ul>
 						</div>
 					</div>
 				</div>
