Add profile photo

--- a/index.html
+++ b/index.html
@@ -58,7 +58,14 @@
 	<!--[if lt IE 9]>
 	<script src="js/respond.min.js"></script>
 	<![endif]-->
-
+	<style>
+		.round {
+		 border-radius: 100px; /* Радиус скругления */
+		 border: 3px solid #17e7a4; /* Параметры рамки */
+		 box-shadow: 0 0 7px #666; /* Параметры тени */
+		 height: 400px;
+		}
+	</style>
 	</head>
 	<body style="background-image: url(images/bg_img.jpg);">
 
@@ -76,7 +83,7 @@
 					<div class="row row-bottom-padded-sm">
 						<div class="col-md-12">
 							<figure>
-								<!-- <img src="images/profile.jpg" alt="Здесь должна быть аватарка"> -->
+								<img src="images/portfolio.jpeg" alt="Здесь должна быть аватарка" class="round">
 							</figure>
 							<h1>Тимофеев Максим Сергеевич</h1>
 							<h3>Web Developer</h3>
