--- a/index.html
+++ b/index.html
@@ -222,13 +222,18 @@
 									<h3>Московский политех</h3>
 									  <p>В рамках практики участвовал в разработке портала центра карьеры для студентов и студенческого портала для нужд университета.</p>
 										<h3>Ссылки:</h3>
-										<p>Ссылки прикрепить к сожалению не могу. Репозиторий GitHub является private, владельцем репозитория не являюсь, поэтому доступ открыть не могу </p>
+										<p>Здесь находяться отчеты по нашей работе:</p>
+										<p><a href="https://drive.google.com/drive/folders/1AesXCa0BUjnycY78tY5srwun3phciktS">https://drive.google.com/drive/folders/1AesXCa0BUjnycY78tY5srwun3phciktS</a></p>
+										<p>Здесь находиться лендинг, описывающий проект</p>
+										<p><a href="http://pd-2021-2.std-941.ist.mospolytech.ru/">http://pd-2021-2.std-941.ist.mospolytech.ru/</a></p>
 										<p>Лабораторные работы, выполненные в ходе прохождения курсов в Московском Политехе</p>
 										<h3>Ссылки:</h3>
 										<p>Самописный PHP OOP MVC framework(Аккуратно, плохой код!):</p>
 										<p><a href="https://github.com/maksimualdTim/php-mvc-oop-framework">https://github.com/maksimualdTim/php-mvc-oop-framework</a></p>
 										<p>Также создавали свой блог, использую Laravel:</p>
 										<p><a href="https://github.com/maksimualdTim/laravel-project">https://github.com/maksimualdTim/laravel-project</a></p>
+										<p>Небольшой проект на Nuxt/Vue</p>
+										<p><a href="https://github.com/maksimualdTim/NewsBlog">https://github.com/maksimualdTim/NewsBlog</a></p>
 								</div>
 							</div>
 							<div class="fh5co-feature">
@@ -240,7 +245,8 @@
 									<h3>“Цифра”</h3>
 									<p>Осенью 2021 г. участвовал в хакатоне от компании “Цифра”.</p>
 									<h3>Ссылки:</h3>
-									<p>Ссылки прикрепить к сожалению не могу. Репозиторий GitHub является private, владельцем репозитория не являюсь, поэтому доступ открыть не могу </p>
+									<p>Здесь находяться отчеты по нашей работе:</p>
+									<p><a href="https://drive.google.com/drive/folders/1EWICU_BsTeG6bAttT3LJiKCK5cSrVXJ4">https://drive.google.com/drive/folders/1EWICU_BsTeG6bAttT3LJiKCK5cSrVXJ4</a></p>
 								</div>
 							</div>
 							<div class="fh5co-feature">
