--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 					<div class="row row-bottom-padded-sm">
 						<div class="col-md-12">
 							<figure>
-								<img src="images/portfolio.jpeg" alt="Здесь должна быть аватарка" class="round">
+								<img src="images/perfect.jpeg" alt="Здесь должна быть аватарка" class="round">
 							</figure>
 							<h1>Тимофеев Максим Сергеевич</h1>
 							<h3>Web Developer</h3>
