--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 							<p>Я родился в г. Москве. В младших классах учился на отлично, за что меня награждали похвальными листами и грамотами. Никогда не буянил, не задирался, всегда был тихим и спкокойным.</p>
 							<p>В старших классах стали проявляться способности в точных науках: алгебре, физике. Геометрию понимал, но не любил. С английским и информатикой складывалось не очень.</p>
 							<p>Обучаясь в последнем классе школы, хорошо сдал экзамены. Мной были выбраны: русский, математика(профильная), физика. Однако перед экзаменами осознал, что мне не интересно дальше изучать физику и математику. Тянуло к компьютерам.</p>
-							<p>В 2019г. поступил в МГТУ им. Баумана на специальность "Прикладная математика". Учился здесь плохо. На первом курсе было много математики и информатики. После того, как мы прошли тему указателей на C++ мне стало интересно не только само программироние, но и устройство компьютера в целом. Так же стал увлекаться веб разработкой.</p>
+							<p>В 2019г. поступил в МГТУ им. Баумана на специальность "Прикладная математика". На первом курсе было много математики и информатики. После того, как мы прошли тему указателей на C++ мне стало интересно не только само программироние, но и устройство компьютера в целом. Так же стал увлекаться веб разработкой.</p>
 							<p>На втором курсе начались предметы, относящиеся к професси математика-инженера. В основном были математика и физика. Информатики больше не было. Я понял, что осваиваемая мною профессия мне не понраву и перевелся в Московский политех, где и обучаюсь по сей день.</p>
 						</div>
 					</div>
