--- a/index.html
+++ b/index.html
@@ -211,7 +211,26 @@
 								</div>
 							</div> -->
 							<h3>Коммерческий опыт:</h3>
-							<p>Коммерческого опыта работы не имею в связи с обучением в университете.</p>
+							<div class="fh5co-feature">
+								<div class="fh5co-icon">
+									<i class="icon-black-tie"></i>
+								</div>
+								<div class="fh5co-text">
+									<h2>2021 фев-апрель</h2>
+									<h3><a href="https://introvert.bz//">Introver</a></h3>
+									<p>Обязанности: доработка и поддержка виджетов для CRM (php, jquery)</p>
+								</div>
+							</div>
+							<div class="fh5co-feature">
+								<div class="fh5co-icon">
+									<i class="icon-black-tie"></i>
+								</div>
+								<div class="fh5co-text">
+									<h2>2021 март-настоящее время</h2>
+									<h3><a href="https://onevision.ai/">Creative Code</a></h3>
+									<p>Обязанности: Написание и поддержка парсеров CRM. Написание и поддержка скрэперов автомобильных интернет каталогов. Доработка административной панели. (Yii2, Vue.js)</p>
+								</div>
+							</div>
 							<h3>Некоммерческий опыт:</h3>
 							<div class="fh5co-feature">
 								<div class="fh5co-icon">
@@ -234,6 +253,10 @@
 										<p><a href="https://github.com/maksimualdTim/laravel-project">https://github.com/maksimualdTim/laravel-project</a></p>
 										<p>Небольшой проект на Nuxt/Vue</p>
 										<p><a href="https://github.com/maksimualdTim/NewsBlog">https://github.com/maksimualdTim/NewsBlog</a></p>
+										<p>Лабораторные по алгоритмам (Java):</p>
+										<p><a href="https://github.com/maksimualdTim/algorithms">https://github.com/maksimualdTim/algorithms</a></p>
+										<p>микро проект на django:</p>
+										<p><a href="https://github.com/maksimualdTim/coursach">https://github.com/maksimualdTim/algorithms</a></p>
 								</div>
 							</div>
 							<div class="fh5co-feature">
