--- a/index.html
+++ b/index.html
@@ -97,10 +97,19 @@
 					</div>
 					<div class="row">
 						<div class="col-md-12 fh5co-counter">
-							<div class="fh5co-number fh5co-left">2</div>
+							<div class="fh5co-number fh5co-left">3</div>
 							<div class="fh5co-text">
 								<h3 class="border-bottom">Года</h3>
 								<p>увлекаюсь веб технологиями, программированием и устройством компьютерного мира в целом</p>
+							</div>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-md-12 fh5co-counter">
+							<div class="fh5co-number fh5co-left">1</div>
+							<div class="fh5co-text">
+								<h3 class="border-bottom">Год</h3>
+								<p>Коммерческого опыта в качестве PHP Backend Developer</p>
 							</div>
 						</div>
 					</div>
@@ -111,9 +120,8 @@
 						<li><a href="mailto:timofeev2001maksim@gmail.com"><i class="icon-envelope"></i></a></li>
 						<li><a href="https://vk.com/maksimuald"><i class="icon-vk"></i></a></li>
 						<li><a href="https://www.instagram.com/maksimuald/"><i class="icon-instagram"></i></a></li>
-						<li><a href="https://docs.google.com/document/d/1GD_NXmFoOPwYfNKofqJ6ImcyOWHkuvGNOL8b73Qinn8"><i class="icon-google"></i></a></li>
 						<li><a href="https://t.me/maksimuald"><i class="fab fa-telegram"></i></a></li>
-						<li><a href="tel:+79265518352"><i class="fas fa-mobile-alt"></i></a></li>
+						<li><a href="tel:+998996042509"><i class="fas fa-mobile-alt"></i></a></li>
 					</ul>
 				</div>
 			</div>
